--- a/web/package.json
+++ b/web/package.json
@@ -12,29 +12,44 @@
     "test": "echo \"Write tests! -> https://gatsby.app/unit-testing\""
   },
   "dependencies": {
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@headlessui/react": "^1.5.0",
+    "@heroicons/react": "^1.0.6",
+    "@material-ui/icons": "^4.11.2",
+    "@mui/material": "^5.4.2",
     "@portabletext/react": "^1.0.1",
     "@sanity/image-url": "^1.0.1",
+    "bootstrap": "^5.1.3",
     "date-fns": "^2.28.0",
     "gatsby": "^4.6.0",
     "gatsby-plugin-image": "^2.6.0",
-    "gatsby-plugin-postcss": "^5.6.0",
+    "gatsby-plugin-material-ui": "^4.1.0",
     "gatsby-plugin-react-helmet": "^5.6.0",
     "gatsby-source-sanity": "^7.3.2",
-    "postcss": "^8.4.5",
+    "gatsby-theme-material-ui": "^5.1.0",
+    "pro-gallery": "^3.1.38",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "react-responsive-carousel": "^3.2.23",
+    "swiper": "^8.0.7"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.2",
     "dotenv": "^15.0.0",
     "eslint": "^8.8.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.28.0",
+    "gatsby-plugin-postcss": "^5.9.0",
+    "postcss": "^8.4.8",
     "postcss-import": "^14.0.2",
     "postcss-preset-env": "^7.3.0",
     "prettier-eslint-cli": "^5.0.1",
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "tailwindcss": "^3.0.23"
   }
 }
