--- a/studio/package.json
+++ b/studio/package.json
@@ -24,10 +24,12 @@
     "@sanity/structure": "^2.22.0",
     "@sanity/studio-hints": "^2.21.10",
     "date-fns": "^2.27.0",
+    "get-youtube-id": "^1.0.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-youtube": "^7.14.0",
     "sanity-plugin-dashboard-widget-document-list": "^0.0.13",
     "sanity-plugin-dashboard-widget-netlify": "^1.2.1",
     "styled-components": "^5.3.3"
