--- a/web/package.json
+++ b/web/package.json
@@ -28,12 +28,14 @@
     "gatsby-plugin-react-helmet": "^5.6.0",
     "gatsby-source-sanity": "^7.3.2",
     "gatsby-theme-material-ui": "^5.1.0",
+    "get-youtube-id": "^1.0.1",
     "pro-gallery": "^3.1.38",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-responsive-carousel": "^3.2.23",
+    "react-youtube": "^7.14.0",
     "swiper": "^8.0.7"
   },
   "devDependencies": {
