--- a/web/package.json
+++ b/web/package.json
@@ -29,7 +29,9 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-google-recaptcha": "^2.1.0",
+    "react-h5-audio-player": "^3.8.4",
     "react-helmet": "^6.1.0",
+    "react-player": "^2.10.1",
     "react-youtube": "^7.14.0",
     "typeface-forum": "^1.1.13"
   },
