--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "private": true,
   "name": "sanity-gatsby-portfolio",
   "version": "0.0.0",
+  "engines": {
+    "node": ">=17.9.0"
+  },
   "scripts": {
     "build": "lerna run build --parallel",
     "dev": "lerna run dev --parallel",
