--- a/web/package.json
+++ b/web/package.json
@@ -19,11 +19,13 @@
     "@heroicons/react": "^1.0.6",
     "@portabletext/react": "^1.0.1",
     "@sanity/image-url": "^1.0.1",
+    "algoliasearch": "^4.13.1",
     "aws-sdk": "^2.1099.0",
     "axios": "^0.26.1",
     "date-fns": "^2.28.0",
     "formik": "^2.2.9",
     "gatsby": "^4.6.0",
+    "gatsby-plugin-algolia": "^0.26.0",
     "gatsby-plugin-image": "^2.6.0",
     "gatsby-plugin-react-helmet": "^5.6.0",
     "gatsby-source-sanity": "^7.3.2",
@@ -34,6 +36,7 @@
     "react-google-recaptcha": "^2.1.0",
     "react-h5-audio-player": "^3.8.4",
     "react-helmet": "^6.1.0",
+    "react-instantsearch-hooks-web": "^6.29.0",
     "react-player": "^2.10.1",
     "react-youtube": "^7.14.0",
     "typeface-forum": "^1.1.13"
