--- a/web/package.json
+++ b/web/package.json
@@ -37,6 +37,7 @@
     "react-h5-audio-player": "^3.8.4",
     "react-helmet": "^6.1.0",
     "react-instantsearch-hooks-web": "^6.29.0",
+    "react-modal": "^3.15.1",
     "react-player": "^2.10.1",
     "react-youtube": "^7.14.0",
     "typeface-forum": "^1.1.13"
