start fixing title issue

--- a/web/package.json
+++ b/web/package.json
@@ -19,6 +19,7 @@
     "@heroicons/react": "^1.0.6",
     "@portabletext/react": "^1.0.1",
     "@react-icons/all-files": "^4.1.0",
+    "@react-spring/web": "^9.7.2",
     "@sanity/image-url": "^1.0.1",
     "algoliasearch": "^4.13.1",
     "aws-sdk": "^2.1099.0",
