--- a/studio/package.json
+++ b/studio/package.json
@@ -8,7 +8,8 @@
     "node": ">=17.9.0"
   },
   "scripts": {
-    "dev": "sanity start",
+    "dev": "sanity dev",
+    "start": "sanity start",
     "format": "prettier-eslint --write \"**/*.js\" \"!node_modules/**\"",
     "build": "sanity build",
     "graphql-deploy": "sanity graphql deploy --playground",
@@ -16,25 +17,23 @@
     "test": "sanity check"
   },
   "dependencies": {
-    "@sanity/base": "^2.22.0",
     "@sanity/cli": "^2.30.3",
     "@sanity/components": "^2.14.0",
-    "@sanity/core": "^2.22.0",
-    "@sanity/dashboard": "^2.22.0",
-    "@sanity/default-layout": "^2.22.4",
-    "@sanity/default-login": "^2.22.0",
-    "@sanity/desk-tool": "^2.22.2",
-    "@sanity/structure": "^2.22.0",
-    "@sanity/studio-hints": "^2.21.10",
+    "@sanity/dashboard": "3.1.5",
+    "@sanity/structure": "^2.36.2",
+    "@sanity/vision": "^3.18.1",
     "date-fns": "^2.27.0",
     "get-youtube-id": "^1.0.1",
-    "prop-types": "^15.7.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "prop-types": "^15.8.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.3.1",
-    "react-youtube": "^7.14.0",
-    "sanity-plugin-dashboard-widget-document-list": "^0.0.13",
-    "sanity-plugin-dashboard-widget-netlify": "^1.2.1",
+    "react-youtube": "^10.1.0",
+    "sanity": "^3.18.1",
+    "sanity-plugin-dashboard-widget-document-list": "^1.0.1",
+    "sanity-plugin-dashboard-widget-netlify": "^2.0.1",
+    "sanity-plugin-graphiql": "^1.4.5",
+    "sanity-plugin-youtube-input": "^0.2.0",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
