--- a/web/package.json
+++ b/web/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.3",
   "author": "Isaac Cohen",
   "engines": {
-    "node": ">=17.9.0"
+    "node": "^18.18.0"
   },
   "scripts": {
     "build": "gatsby build",
@@ -28,10 +28,12 @@
     "gatsby": "^4.6.0",
     "gatsby-plugin-algolia": "^0.26.0",
     "gatsby-plugin-image": "^2.6.0",
+    "gatsby-plugin-netlify": "^5.1.1",
+    "gatsby-plugin-postcss": "^5.25.0",
     "gatsby-plugin-react-helmet": "^5.6.0",
     "gatsby-source-sanity": "^7.3.2",
     "get-youtube-id": "^1.0.1",
-    "pro-gallery": "^3.1.38",
+    "pro-gallery": "^5.0.118",
     "react": "^17.0.2",
     "react-cookie": "^4.1.1",
     "react-device-detect": "^2.2.3",
@@ -49,13 +51,7 @@
     "@tailwindcss/forms": "^0.5.0",
     "autoprefixer": "^10.4.2",
     "dotenv": "^15.0.0",
-    "eslint": "^8.8.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.28.0",
-    "gatsby-plugin-netlify": "^4.4.0",
-    "gatsby-plugin-postcss": "^5.9.0",
+    "eslint-config-react-app": "^7.0.1",
     "postcss": "^8.4.8",
     "postcss-import": "^14.0.2",
     "postcss-preset-env": "^7.3.0",
